--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "@types/lodash": "^4.14.118",
     "@types/mongodb": "^3.1.14",
     "class-transformer": "^0.2.0",
+    "conventional-changelog-cli": "^2.0.11",
     "deep-diff": "^1.0.2",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
+    "release-it": "7.4.8",
     "tslint": "^5.11.0"
   },
   "devDependencies": {
