--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,12 @@
 		"declaration": true,
     "experimentalDecorators": true,
     "noImplicitAny": false,
-    "sourceMap": true
+    "sourceMap": true,
+    "lib": [
+      "es2015",
+      "es2016",
+      "es2017"
+    ]
   },
   "exclude": [
     "node_modules",
