--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "post:release": "echo Successfully released $npm_package_version",
     "init": "./bin/setup-git-hooks"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run test"
+    }
+  },
   "author": "Benjamin DANIEL <benjamin.daniel@neo9.fr>",
   "repository": {
     "type": "git",
@@ -56,6 +62,7 @@
     "@types/node": "^10.12.18",
     "@types/std-mocks": "^1.0.0",
     "ava": "^1.1.0",
+    "husky": "^1.3.1",
     "nyc": "^13.1.0",
     "std-mocks": "^1.0.1",
     "typescript": "^3.2.2"
