--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "nyc": "^13.1.0",
     "std-mocks": "^1.0.1",
     "tslint": "^5.17.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "mongodb-memory-server": "6.0.2"
   },
   "bugs": {
     "url": "https://github.com/neo9/n9-mongo-client/issues"
