--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,15 +11,7 @@
     "experimentalDecorators": true,
     "noImplicitAny": false,
     "sourceMap": true,
-    "lib": [
-      "es2015",
-      "es2016",
-      "es2017",
-      "es2018"
-    ]
+    "lib": ["es2015", "es2016", "es2017", "es2018"]
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
