--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "npm run lint",
+      "pre-commit": "npm run format && npm run lint",
       "pre-push": "npm run test"
     }
   },
