--- a/.release-it.json
+++ b/.release-it.json
@@ -1,25 +1,16 @@
 {
-  "non-interactive": true,
-  "dry-run": false,
-  "verbose": true,
-  "force": false,
-  "pkgFiles": ["package.json"],
-  "preReleaseId": null,
-  "increment": "patch",
-  "buildCommand": "npm run build",
-  "changelogCommand": "npm run build:changelog",
-  "safeBump": false,
-  "requireCleanWorkingDir": false,
-  "src": {
+  "git": {
     "commit": true,
-    "commitMessage": "release: V %s",
+    "commitMessage": "release: V ${version}",
+    "requireCleanWorkingDir": true,
     "tag": true,
     "tagName": "%s",
-    "tagAnnotation": "release: V %s",
-    "push": true,
-    "pushRepo": null,
-    "beforeStartCommand": false,
-    "afterReleaseCommand": "npm run post:release"
+    "tagAnnotation": "release: V ${version}",
+    "push": true
+  },
+  "kooks": {
+    "before:init": ["npm run lint", "npm run test"],
+    "after:release": "npm run post:release"
   },
   "npm": {
     "publish": true
@@ -27,25 +18,10 @@
   "github": {
     "release": false
   },
-  "dist": {
-    "repo": false
-  },
-  "prompt": {
-    "src": {
-      "status": true,
-      "commit": true,
-      "tag": true,
-      "push": true,
-      "release": true,
-      "publish": true
-    },
-    "dist": {
-      "status": true,
-      "commit": true,
-      "tag": true,
-      "push": true,
-      "release": true,
-      "publish": true
+  "plugins": {
+    "@release-it/conventional-changelog": {
+      "preset": "eslint",
+      "infile": "CHANGELOG.md"
     }
   }
 }
