--- a/tslint.yaml
+++ b/tslint.yaml
@@ -21,6 +21,9 @@ rules:
   max-classes-per-file:
     - true
     - 5
+  cyclomatic-complexity:
+    - true
+    - 25
   # bug open about no-unused-variable : https://github.com/palantir/tslint/issues/3463
   #  no-unused-variable:
   #    - true
