--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neo9/n9-mongo-client",
-  "version": "0.14.4",
+  "version": "0.15.0-rc.0",
   "description": "Library to easily start app with routing-controllers",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
