--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@neo9/n9-node-utils": "^2.0.1",
     "class-transformer": "^0.2.0",
     "deep-diff": "^1.0.2",
+    "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.20",
     "mingo": "^3.1.0",
     "mongodb": "3.6.2",
