--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "deep-diff": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.20",
-    "mingo": "^3.1.0",
+    "mingo-fork-no-hash": "^3.1.1",
     "mongodb": "3.6.2",
     "mongodb-lock": "^1.0.1"
   },
