--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "dependencies": {
     "@neo9/n9-node-log": "^3.1.1",
     "@neo9/n9-node-utils": "^2.0.2",
-    "class-transformer": "^0.3.2",
+    "class-transformer": "0.3.1",
     "deep-diff": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.20",
