--- a/package.json
+++ b/package.json
@@ -52,13 +52,15 @@
   "dependencies": {
     "@neo9/n9-node-log": "^3.1.1",
     "@neo9/n9-node-utils": "^2.0.2",
-    "class-transformer": "0.3.1",
     "deep-diff": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.20",
     "mingo-fork-no-hash": "^3.1.1",
     "mongodb": "3.6.3",
     "mongodb-lock": "^1.0.1"
+  },
+  "peerDependencies": {
+    "class-transformer": "^0.3.2"
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
@@ -72,6 +74,7 @@
     "@types/std-mocks": "^1.0.0",
     "ava": "^3.15.0",
     "benny": "^3.6.15",
+    "class-transformer": "^0.3.2",
     "codecov": "^3.8.1",
     "husky": "^4.3.8",
     "mongodb-memory-server": "6.9.3",
