--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
     "mingo-fork-no-hash": "^3.1.1",
-    "mongodb": "3.6.6",
-    "mongodb-lock": "^1.0.1"
+    "mongodb": "3.6.6"
   },
   "peerDependencies": {
     "class-transformer": "^0.3.2"
