--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "build": "rimraf dist/ && tsc",
     "dev": "rimraf dist/ && tsc --watch",
     "format": "prettier --write '{,@(src|test)/**/}*.*'",
-    "lint": "tslint --project tsconfig.json --format verbose '{src,test}/**/*.ts'",
-    "lint:apply": "npm run format && tslint --fix --project tsconfig.json '{src,test}/**/*.ts'",
-    "lint:verbose": "tslint --fix --project tsconfig.json --format verbose '{src,test}/**/*.ts'",
+    "lint": "eslint --config .eslintrc.yaml '{src,test}/**/*.ts'",
+    "lint:apply": "npm run format && eslint --fix --config .eslintrc.yaml '{src,test}/**/*.ts'",
+    "lint:verbose": "eslint --fix --config .eslintrc.yaml '{src,test}/**/*.ts' --format unix '{src,test}/**/*.ts'",
     "test:dev": "export NODE_ENV=test && TS_NODE_FILES=true ava --verbose --color --serial --watch",
     "test": "npm run lint && export NODE_ENV=test && TS_NODE_FILES=true nyc ava --verbose --color --serial && nyc report --reporter=html",
     "test:watch": "node test/run-tests.js watch",
@@ -64,7 +64,7 @@
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@commitlint/cli": "^12.1.4",
-    "@neo9/n9-coding-style": "^2.0.0",
+    "@neo9/n9-coding-style": "^3.0.0",
     "@release-it/conventional-changelog": "^2.0.1",
     "@types/deep-diff": "^1.0.0",
     "@types/lodash": "^4.14.169",
@@ -82,9 +82,6 @@
     "release-it": "^14.11.6",
     "std-mocks": "^1.0.1",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^4.2.4"
   },
   "bugs": {
