yarn: Upgrade conventional-changelog to latest version 5.1.1

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov -f coverage.lcov",
     "preversion": "npm test",
     "prepublishOnly": "npm run build",
-    "release": "export BABEL_DISABLE_CACHE=1 && release-it --ci",
-    "release:dry": "export BABEL_DISABLE_CACHE=1 && release-it --ci --dry-run=true",
+    "release": "release-it --ci",
+    "release:dry": "release-it --ci --dry-run",
     "build:changelog": "conventional-changelog -i CHANGELOG.md -s -p jscs -r 0",
     "post:release": "echo Successfully released $npm_package_version",
     "init": "./bin/setup-git-hooks",
@@ -66,7 +66,7 @@
     "@ava/typescript": "^3.0.1",
     "@commitlint/cli": "^16.2.3",
     "@neo9/n9-coding-style": "^3.0.1",
-    "@release-it/conventional-changelog": "^4.3.0",
+    "@release-it/conventional-changelog": "^5.1.1",
     "@types/deep-diff": "^1.0.0",
     "@types/lodash": "^4.14.182",
     "@types/mongodb": "^3.6.12",
