--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "class-transformer": "^0.4.0",
     "codecov": "^3.8.3",
     "husky": "^4.3.8",
-    "mongodb-memory-server": "6.9.6",
+    "mongodb-memory-server": "^7.6.3",
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
     "release-it": "^15.5.0",
