--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov -f coverage.lcov",
     "preversion": "npm test",
     "prepublishOnly": "npm run build",
-    "release": "release-it --ci",
-    "release:dry": "release-it --ci --dry-run",
+    "release": "release-it",
+    "release:dry": "release-it --dry-run",
     "build:changelog": "conventional-changelog -i CHANGELOG.md -s -p jscs -r 0",
     "post:release": "echo Successfully released $npm_package_version",
     "init": "./bin/setup-git-hooks",
