--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
     "mingo-fork-no-hash": "^3.1.1",
-    "mongodb": "3.6.6",
+    "mongodb": "5.6.0",
     "promise-pool-executor": "^1.1.1"
   },
   "peerDependencies": {
@@ -69,15 +69,14 @@
     "@release-it/conventional-changelog": "^5.1.1",
     "@types/deep-diff": "^1.0.0",
     "@types/lodash": "^4.14.182",
-    "@types/mongodb": "^3.6.12",
-    "@types/node": "^15.3.0",
+    "@types/node": "16.18.0",
     "@types/std-mocks": "^1.0.1",
     "ava": "^4.2.0",
     "benny": "^3.7.1",
     "class-transformer": "^0.4.0",
     "codecov": "^3.8.3",
     "husky": "^4.3.8",
-    "mongodb-memory-server": "^7.6.3",
+    "mongodb-memory-server": "8.12.2",
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
     "release-it": "^15.5.0",
