--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "lodash": "^4.17.21",
     "mingo-fork-no-hash": "^3.1.1",
     "mongodb": "~5.7.0",
-    "promise-pool-executor": "^1.1.1"
+    "promise-pool-executor": "^1.1.1",
+    "typescript": "~4.5.5"
   },
   "peerDependencies": {
     "class-transformer": "^0.4.0"
@@ -82,8 +83,7 @@
     "prettier": "^2.6.2",
     "release-it": "^15.5.0",
     "std-mocks": "^1.0.1",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.2.4"
+    "ts-node": "^10.9.1"
   },
   "bugs": {
     "url": "https://github.com/neo9/n9-mongo-client/issues"
