yarn: Upgrade n9-coding-style to 5.0.0 ava to 4.3.0 and n9-node-utils

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,2 +1,7 @@
 extends:
   - './node_modules/@neo9/n9-coding-style/.eslintrc.yaml'
+overrides:
+  - files:
+      - 'test/**/*'
+    rules:
+      '@typescript-eslint/naming-convention': 0
