--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "lint:apply": "npm run format && eslint --fix --config .eslintrc.yaml '{src,test}/**/*.ts'",
     "lint:verbose": "eslint --fix --config .eslintrc.yaml '{src,test}/**/*.ts' --format unix '{src,test}/**/*.ts'",
     "test:dev": "export NODE_ENV=test && TS_NODE_FILES=true ava --verbose --color --serial --watch",
-    "test": "npm run lint && export NODE_ENV=test && TS_NODE_FILES=true nyc ava --verbose --color --serial && nyc report --reporter=html",
-    "test:watch": "node test/run-tests.js watch",
+    "test": "export NODE_ENV=test && TS_NODE_FILES=true nyc ava --verbose --color --serial && nyc report --reporter=html",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov -f coverage.lcov",
     "preversion": "npm test",
     "prepublishOnly": "npm run build",
@@ -51,7 +50,7 @@
   },
   "dependencies": {
     "@neo9/n9-node-log": "^4.1.0",
-    "@neo9/n9-node-utils": "^2.1.0",
+    "@neo9/n9-node-utils": "^2.2.1",
     "bson": "^6.0.0",
     "deep-diff": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
@@ -67,13 +66,13 @@
   "devDependencies": {
     "@ava/typescript": "^3.0.1",
     "@commitlint/cli": "^16.2.3",
-    "@neo9/n9-coding-style": "^3.0.1",
+    "@neo9/n9-coding-style": "^5.0.0",
     "@release-it/conventional-changelog": "^5.1.1",
     "@types/deep-diff": "^1.0.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^16.18.41",
     "@types/std-mocks": "^1.0.1",
-    "ava": "^4.2.0",
+    "ava": "^4.3.0",
     "benny": "^3.7.1",
     "class-transformer": "^0.4.0",
     "codecov": "^3.8.3",
