aggregate: Add n9-aggregation-cursor and some tests on aggregation builder

--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Test
+      - name: Lint
         run: yarn lint
 
       - name: Test
