--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Lint
         run: yarn lint
 
-      - name: Test
+      - name: Build
         run: yarn build
 
       - name: Test
