--- a/package.json
+++ b/package.json
@@ -46,19 +46,17 @@
     "routing-controllers"
   ],
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=16.20.2"
   },
   "dependencies": {
     "@neo9/n9-node-log": "^4.1.0",
     "@neo9/n9-node-utils": "^2.2.1",
-    "bson": "^6.0.0",
     "deep-diff": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
     "mingo-fork-no-hash": "^3.1.1",
     "mongodb": "~6.0.0",
-    "promise-pool-executor": "^1.1.1",
-    "typescript": "~4.5.5"
+    "promise-pool-executor": "^1.1.1"
   },
   "peerDependencies": {
     "class-transformer": "^0.4.0"
@@ -68,6 +66,7 @@
     "@commitlint/cli": "^16.2.3",
     "@neo9/n9-coding-style": "^5.0.0",
     "@release-it/conventional-changelog": "^5.1.1",
+    "@tsconfig/node16": "^16.1.1",
     "@types/deep-diff": "^1.0.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^16.18.41",
@@ -82,7 +81,8 @@
     "prettier": "^2.6.2",
     "release-it": "^15.5.0",
     "std-mocks": "^1.0.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "~5.1.6"
   },
   "bugs": {
     "url": "https://github.com/neo9/n9-mongo-client/issues"
