--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "lint:apply": "npm run format && eslint --fix --config .eslintrc.yaml '{src,test}/**/*.ts'",
     "lint:verbose": "eslint --fix --config .eslintrc.yaml '{src,test}/**/*.ts' --format unix '{src,test}/**/*.ts'",
     "test:dev": "export NODE_ENV=test && TS_NODE_FILES=true ava --verbose --color --serial --watch",
-    "test": "npm run lint && export NODE_ENV=test && TS_NODE_FILES=true nyc ava --verbose --color --serial && nyc report --reporter=html",
-    "test:watch": "node test/run-tests.js watch",
+    "test": "export NODE_ENV=test && TS_NODE_FILES=true nyc ava --verbose --color --serial && nyc report --reporter=html",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov -f coverage.lcov",
     "preversion": "npm test",
     "prepublishOnly": "npm run build",
@@ -47,16 +46,16 @@
     "routing-controllers"
   ],
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=16.20.2"
   },
   "dependencies": {
     "@neo9/n9-node-log": "^4.1.0",
-    "@neo9/n9-node-utils": "^2.1.0",
+    "@neo9/n9-node-utils": "^2.2.1",
     "deep-diff": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
     "mingo-fork-no-hash": "^3.1.1",
-    "mongodb": "3.6.6",
+    "mongodb": "~6.0.0",
     "promise-pool-executor": "^1.1.1"
   },
   "peerDependencies": {
@@ -65,25 +64,25 @@
   "devDependencies": {
     "@ava/typescript": "^3.0.1",
     "@commitlint/cli": "^16.2.3",
-    "@neo9/n9-coding-style": "^3.0.1",
+    "@neo9/n9-coding-style": "^5.0.0",
     "@release-it/conventional-changelog": "^5.1.1",
+    "@tsconfig/node16": "^16.1.1",
     "@types/deep-diff": "^1.0.0",
     "@types/lodash": "^4.14.182",
-    "@types/mongodb": "^3.6.12",
-    "@types/node": "^15.3.0",
+    "@types/node": "^16.18.41",
     "@types/std-mocks": "^1.0.1",
-    "ava": "^4.2.0",
+    "ava": "^4.3.0",
     "benny": "^3.7.1",
     "class-transformer": "^0.4.0",
     "codecov": "^3.8.3",
     "husky": "^4.3.8",
-    "mongodb-memory-server": "^7.6.3",
+    "mongodb-memory-server": "^8.15.1",
     "nyc": "^15.1.0",
     "prettier": "^2.6.2",
     "release-it": "^15.5.0",
     "std-mocks": "^1.0.1",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.2.4"
+    "ts-node": "^10.9.1",
+    "typescript": "~5.1.6"
   },
   "bugs": {
     "url": "https://github.com/neo9/n9-mongo-client/issues"
