yarn: Upgrade dependencies #72

--- a/package.json
+++ b/package.json
@@ -62,27 +62,27 @@
     "class-transformer": "^0.4.0"
   },
   "devDependencies": {
-    "@ava/typescript": "^3.0.1",
-    "@commitlint/cli": "^16.2.3",
-    "@neo9/n9-coding-style": "^5.0.0",
-    "@release-it/conventional-changelog": "^5.1.1",
+    "@ava/typescript": "^4.1.0",
+    "@commitlint/cli": "^17.7.1",
+    "@neo9/n9-coding-style": "^5.1.0",
+    "@release-it/conventional-changelog": "^7.0.1",
     "@tsconfig/node16": "^16.1.1",
-    "@types/deep-diff": "^1.0.0",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^16.18.41",
+    "@types/deep-diff": "^1.0.2",
+    "@types/lodash": "^4.14.197",
+    "@types/node": "~16.18.48",
     "@types/std-mocks": "^1.0.1",
-    "ava": "^4.3.0",
+    "ava": "^5.3.1",
     "benny": "^3.7.1",
-    "class-transformer": "^0.4.0",
+    "class-transformer": "0.4.0",
     "codecov": "^3.8.3",
     "husky": "^4.3.8",
     "mongodb-memory-server": "^8.15.1",
     "nyc": "^15.1.0",
-    "prettier": "^2.6.2",
-    "release-it": "^15.5.0",
+    "prettier": "^3.0.3",
+    "release-it": "^16.1.5",
     "std-mocks": "^1.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "~5.1.6"
+    "typescript": "~5.2.2"
   },
   "bugs": {
     "url": "https://github.com/neo9/n9-mongo-client/issues"
