--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@neo9/n9-mongo-client",
-  "version": "1.0.0-rc.0",
+  "version": "1.0.0-rc.1",
   "description": "Library to easily start app with routing-controllers",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist", "mongodb.d.ts"],
+  "files": [
+    "dist",
+    "mongodb.d.ts"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist/ mongodb.d.ts && tsc && rm -rf dist/test && mv dist/src/* dist/ && rm -rf dist/src && cp dist/mongodb.d.ts ./",
@@ -38,7 +41,10 @@
     "url": "git+https://github.com/neo9/n9-mongo-client.git"
   },
   "homepage": "https://github.com/neo9/n9-mongo-client#n9-mongo-client",
-  "tags": ["mongodb", "driver"],
+  "tags": [
+    "mongodb",
+    "driver"
+  ],
   "engines": {
     "node": ">=16.20.2"
   },
@@ -84,11 +90,24 @@
   "directories": {
     "test": "test"
   },
-  "keywords": ["mongo", "mongodb", "client", "driver", "Neo9", "France"],
+  "keywords": [
+    "mongo",
+    "mongodb",
+    "client",
+    "driver",
+    "Neo9",
+    "France"
+  ],
   "ava": {
-    "files": ["test/*"],
+    "files": [
+      "test/*"
+    ],
     "timeout": "1m",
-    "extensions": ["ts"],
-    "require": ["ts-node/register"]
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
   }
 }
