--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
@@ -45,3 +46,4 @@ jobs:
 
       - name: Push coverage
         run: yarn coverage
+        if: ${{ matrix.node-version == '20.x' }}
