--- a/.release-it.json
+++ b/.release-it.json
@@ -8,15 +8,15 @@
     "tagAnnotation": "release: V ${version}",
     "push": true
   },
-  "kooks": {
-    "before:init": ["npm run lint", "npm run test"],
-    "after:release": "npm run post:release"
+  "hooks": {
+    "before:init": ["npm run build", "npm run lint", "npm run test"],
+    "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
   },
   "npm": {
     "publish": true
   },
   "github": {
-    "release": false
+    "release": true
   },
   "plugins": {
     "@release-it/conventional-changelog": {
