--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
   "name": "@neo9/n9-mongodb-client",
   "version": "1.0.0-rc.10",
   "description": "Library to easily start app with routing-controllers",
+  "keywords": [
+    "mongo",
+    "mongodb",
+    "client",
+    "driver",
+    "Neo9",
+    "France"
+  ],
+  "license": "GPL-3.0-or-later",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
     "mongodb.d.ts"
   ],
-  "license": "MIT",
   "scripts": {
     "dev": "rimraf dist/ && tsc --watch",
     "build": "rimraf dist/ mongodb.d.ts && tsc && rm -rf dist/test && mv dist/src/* dist/ && rm -rf dist/src && cp dist/mongodb.d.ts ./",
@@ -20,16 +28,9 @@
     "test:dev": "export NODE_ENV=test && TS_NODE_FILES=true ava --no-worker-threads --verbose --color --serial --watch",
     "test": "export NODE_ENV=test && TS_NODE_FILES=true nyc ava --no-worker-threads --verbose --color --serial && nyc report --reporter=html",
     "test:one": "export NODE_ENV=test && TS_NODE_FILES=true ava --no-worker-threads --verbose --color --serial",
-    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov -f coverage.lcov",
     "release": "release-it",
     "release:pre-release": "release-it --preRelease",
     "release:dry": "release-it --dry-run"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "npm run format && npm run lint"
-    }
   },
   "author": {
     "name": "Benjamin DANIEL",
@@ -37,28 +38,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/neo9/n9-mongodb-client.git"
+    "url": "git+https://github.com/neo9/n9-mongodb-client"
   },
-  "homepage": "https://github.com/neo9/n9-mongodb-client#n9-mongodb-client",
-  "tags": [
-    "mongodb",
-    "driver"
-  ],
+  "homepage": "https://github.com/neo9/n9-mongodb-client#readme",
   "engines": {
-    "node": ">=16.20.2"
+    "node": ">= 16.20"
   },
   "dependencies": {
-    "@neo9/n9-node-log": "^5.0.0-rc.5",
-    "@neo9/n9-node-utils": "^2.2.1",
+    "@neo9/n9-node-log": "^5.0.0-rc.6",
+    "@neo9/n9-node-utils": "^3.0.0-rc.0",
     "deep-diff": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
-    "mingo-fork-no-hash": "^3.1.1",
+    "mingo": "^6.4.7",
     "mongodb": "~6.1.0",
     "promise-pool-executor": "^1.1.1"
   },
   "peerDependencies": {
-    "class-transformer": "^0.4.0"
+    "class-transformer": "0.4.0"
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
@@ -68,38 +65,22 @@
     "@tsconfig/node16": "^16.1.1",
     "@types/deep-diff": "^1.0.3",
     "@types/lodash": "^4.14.199",
-    "@types/node": "~16.18.48",
+    "@types/node": "^16.18.58",
     "@types/std-mocks": "^1.0.2",
     "ava": "^5.3.1",
-    "benny": "^3.7.1",
     "class-transformer": "0.4.0",
-    "codecov": "^3.8.3",
     "husky": "^4.3.8",
-    "mongodb-memory-server": "^9.0.0",
+    "mongodb-memory-server": "^9.0.1",
     "nyc": "^15.1.0",
     "prettier": "^3.0.3",
     "release-it": "^16.2.1",
     "std-mocks": "^2.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "~5.2.2"
+    "typescript": "^5.2.2"
   },
-  "bugs": {
-    "url": "https://github.com/neo9/n9-mongodb-client/issues"
-  },
-  "directories": {
-    "test": "test"
-  },
-  "keywords": [
-    "mongo",
-    "mongodb",
-    "client",
-    "driver",
-    "Neo9",
-    "France"
-  ],
   "ava": {
     "files": [
-      "test/*"
+      "test/**/*.test.ts"
     ],
     "timeout": "1m",
     "extensions": [
@@ -108,5 +89,11 @@
     "require": [
       "ts-node/register"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "npm run format && npm run lint"
+    }
   }
 }
