--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@tsconfig/node16/tsconfig.json",
-  "compileOnSave": true,
   "compilerOptions": {
-    "strict": false,
     "module": "commonjs",
-    "moduleResolution": "node",
     "outDir": "dist",
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "declaration": true,
     "experimentalDecorators": true,
-    "noImplicitAny": false,
-    "sourceMap": true
+    "sourceMap": true,
+    "strict": false,
+    "esModuleInterop": false
   },
-  "exclude": ["node_modules", "dist"]
+  "include": ["src", "test"],
+  "exclude": []
 }
