--- a/package.json
+++ b/package.json
@@ -51,16 +51,16 @@
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
     "mingo": "^6.4.7",
-    "mongodb": "~6.1.0",
+    "mongodb": "~6.2.0",
     "promise-pool-executor": "^1.1.1"
   },
   "peerDependencies": {
-    "class-transformer": "0.4.0"
+    "class-transformer": "0.5.1"
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
-    "@commitlint/cli": "^17.7.2",
-    "@neo9/n9-coding-style": "^5.1.2",
+    "@commitlint/cli": "^18.2.0",
+    "@neo9/n9-coding-style": "^6.0.0-rc.3",
     "@release-it/conventional-changelog": "^7.0.2",
     "@tsconfig/node16": "^16.1.1",
     "@types/deep-diff": "^1.0.3",
@@ -68,7 +68,7 @@
     "@types/node": "^16.18.58",
     "@types/std-mocks": "^1.0.2",
     "ava": "^5.3.1",
-    "class-transformer": "0.4.0",
+    "class-transformer": "0.5.1",
     "husky": "^4.3.8",
     "mongodb-memory-server": "^9.0.1",
     "nyc": "^15.1.0",
