--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "node": ">= 18"
   },
   "dependencies": {
-    "@neo9/n9-node-log": "^5.0.0-rc.7",
-    "@neo9/n9-node-utils": "^3.0.0-rc.0",
+    "@neo9/n9-node-log": "^5.0.0",
+    "@neo9/n9-node-utils": "^3.0.0",
     "deep-diff": "^1.0.2",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.21",
-    "mingo": "^6.4.7",
+    "mingo": "^6.4.9",
     "mongodb": "~6.2.0",
     "promise-pool-executor": "^1.1.1"
   },
@@ -59,21 +59,21 @@
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
-    "@commitlint/cli": "^18.2.0",
-    "@neo9/n9-coding-style": "^6.0.0-rc.3",
-    "@release-it/conventional-changelog": "^7.0.2",
+    "@commitlint/cli": "^18.4.1",
+    "@neo9/n9-coding-style": "^6.0.0",
+    "@release-it/conventional-changelog": "^8.0.1",
     "@tsconfig/node16": "^16.1.1",
     "@types/deep-diff": "^1.0.5",
-    "@types/lodash": "^4.14.199",
+    "@types/lodash": "^4.14.201",
     "@types/node": "^16.18.60",
-    "@types/std-mocks": "^1.0.2",
+    "@types/std-mocks": "^1.0.4",
     "ava": "^5.3.1",
     "class-transformer": "0.5.1",
     "husky": "^4.3.8",
     "mongodb-memory-server": "^9.0.1",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.3",
-    "release-it": "^16.2.1",
+    "prettier": "^3.1.0",
+    "release-it": "^17.0.0",
     "std-mocks": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
